Fix modal on mobile; detectRetina => true

--- a/styles/atlastory.less
+++ b/styles/atlastory.less
@@ -36,7 +36,7 @@
 }
 
 @logo-normal-size: 0.8;
-@logo-retina-size: 0.5;
+@logo-retina-size: 0.8;
 .leaflet-container .map-logo {
   width: 175px * @logo-normal-size;
   height: 43px * @logo-normal-size;
