--- a/styles/modals.less
+++ b/styles/modals.less
@@ -79,8 +79,11 @@
 // Shell div to position the modal with bottom padding
 .modal-dialog {
   position: relative;
+  box-sizing: border-box;
   width: auto;
   margin: 10px;
+  max-height: 100%;
+  overflow: auto;
 }
 
 // Actual modal
